--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ h1{
     margin-top:40px;
     margin-bottom:40px;
 }
+.maintext:hover{
+    color:#ffdd57;
+    drop-shadow: 2px 4px 6px black;
+}
 .card{
     margin-top:5px;
     margin-bottom:5px;
