--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ h1{
 .card{
     margin-top:5px;
     margin-bottom:5px;
-    margin-left:10px;
-    margin-right:10px;
+    margin-left:40px;
+    margin-right:40px;
 }
+.img-fluid{
+    height:50%;
+    width:50%;
+    margin:auto;
+}
+/* 614 */
